# stackbench-v3

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml  run_api_completeness_only.py  test_hooks.py  test_mcp_server_agent.py
.claude/: settings.json
.claude/hooks/: validate_extraction_json.py  validate_output_directory.py  validate_validation_json.py
cc-docs/: slash-commands-in-sdks.md
docs/: 0-plan.md  association-improvement-plan.md  clarity-scoring-data-flow.md  clarity-scoring-mcp-design.md  lancedb-client-insights.md  mcp-integration-notes.md
docs/agents/: api-completeness-agent.md  api-signature-validation-agent.md  clarity-agent.md  code-example-validation-agent.md  extraction-agent.md  walkthrough-audit-agent.md  walkthrough-generate-agent.md
docs/overall_goals/: documentation_lifecycle_and_mcplatform.md  mcplatform.md
docs/readme_llm/: implementation_summary.md  readme.llm.plan.md
frontend/: IMPLEMENTATION_SUMMARY.md  README.md  package.json  vite-plugin-local-fs.ts  vite.config.ts
frontend/src/: App.tsx  index.css
nbs/: test.ipynb
stackbench/: __init__.py  cli.py  schemas.py
stackbench/agents/: __init__.py  api_completeness_agent.py  api_signature_validation_agent.py  clarity_agent.py  clarity_helpers.py  code_example_validation_agent.py  extraction_agent.py
stackbench/cache/: __init__.py  manager.py
stackbench/hooks/: README.md  __init__.py  logging.py  logging_manager.py  manager.py  validation.py
stackbench/introspection_templates/: go_introspect.go  javascript_introspect.js  markdown_api_matcher.py  python_introspect.py  rust_introspect.rs  typescript_introspect.ts
stackbench/mcp_servers/: __init__.py  api_completeness_server.py  clarity_scoring_server.py
stackbench/pipeline/: __init__.py  runner.py
stackbench/readme_llm/: README.md  __init__.py  generator.py  schemas.py
stackbench/repository/: __init__.py  manager.py
stackbench/utils/: __init__.py  schema_utils.py
tests/: __init__.py
(+43 files in other folders)
